# RaceSimX

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
config/cars/: example_awd_sedan.toml  example_muscle_car.toml
config/environment/: standard.toml
config/profiles/: defaults.toml
config/races/: standard.toml
crates/sim-core/: Cargo.toml
crates/sim-core/src/: confidence.rs  config.rs  estimation.rs  lib.rs  solver.rs  types.rs  units.rs  validation.rs
crates/sim-core/tests/: integration.rs
doc/: build.md  instruct.md
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
