[package]
name = "race-comparison"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sim-core = { path = "../crates/sim-core" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
